--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,10 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=swiftbilling
+DB_USERNAME=root
+DB_PASSWORD=
+DB_INSTALLED=1
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
